# App

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  format.yml  formatter.yml  python-app.yml  ruff.yml
src/: .gitignore  App2  always_restart.sh  api_requests.py  app  app -mp  app copy 2  app test  app.py  app.service  app2  app3  app_administrative  app_ag  app_b  app_maintainer  app_producer  app_producer_bin  app_producer_binance  app_producer_deribit  app_pub  app_scalping  app_st.py  app_sub  app_test  app_transactions  app_vis.py  binance  cached.py  create_db_and_tables_sqlite.py  data_producer  deleting_data_db  espn  forecast_model.h5  functions.py  general.service  general_task.py  general_tasks  general_tasks copy  general_tasks.py  (+26 more)
src/configuration/: config.py  config_oci.py  id_numbering.py  label_numbering.py
src/data_cleaning/: app_data_cleaning  app_data_cleaning.py  managing_closed_transactions.py  managing_delivered_transactions.py  pruning_db.py  reconciling_db.py
src/db_management/: query_sql.py  redis_client.py  sql_executing_queries.py  sql_manipulating_db_tables.py  sql_querying_tables.py  sqlite_management.py
src/market_understanding/: futures_analysis.py  managing_ohlc  market_analysis_general.py  scanning_volume_spike.py  technical_analysis.py
src/messaging/: get_published_messages.py  (+4 more)
tests/: __init__.py  test_order_mgt.py  test_str_basic_strategy.py  test_str_combo_auto.py  test_str_hedging_spot.py  test_str_managing_labels.py  test_utils_str_modification.py
(+78 files in other folders)
