[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.10",
    "aiosqlite==0.20.0",
    "attr>=0.3.2",
    "dataclassy==0.11.1",
    "loguru==0.7.2",
    "multidict>=6.1.0",
    "orjson==3.10.10",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "tomli>=2.0.2",
    "urllib3>=2.2.3",
    "websockets==13.1"
]