[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite==0.20.0",
    "dataclassy==0.11.1",
    "httpx>=0.27.2",
    "loguru==0.7.2",
    "orjson==3.10.10",
    "python-dotenv==1.0.1",
    "tomli>=2.0.2",
    "websockets==13.1"
]