[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.20.0",
    "blue>=0.9.1",
    "certifi==2024.8.30",
    "dataclassy==0.11.1",
    "flake8>=4.0.1",
    "httpx>=0.27.2",
    "idna==3.10",
    "isort>=5.13.2",
    "loguru==0.7.2",
    "orjson==3.10.10",
    "pandas>=2.2.3",
    "python-dotenv==1.0.1",
    "requests>=2.32.3",
    "tomli>=2.0.2",
    "uvloop>=0.21.0",
    "websockets==13.1",
]
